--- a/index.html
+++ b/index.html
@@ -1,7 +1,29 @@
 <html>
   <head>
+    <meta charset='utf-8'>    
+    <!-- Basic -->
+    <meta name='author' content='Devine Lu Linvega'>
+    <meta name='description' content='Orca: Esoteric Programming Language'/>
+    <meta name='keywords' content='Orca, livecoding, programming language, lisp, udp, midi, ide' />
+    <meta name='license' content='name=BY-NC-SA(4.0), url=https://creativecommons.org/licenses/by-nc-sa/4.0/'/>
+    <meta name='thumbnail' content='https://wiki.xxiivv.com/media/services/thumbnail.jpg' />
+    <!-- Twitter -->
+    <meta name='twitter:card' content='summary'>
+    <meta name='twitter:site' content='@neauoire'>
+    <meta name='twitter:title' content='Orca'>
+    <meta name='twitter:description' content='An Esoteric Programming Language'>
+    <meta name='twitter:creator' content='@neauoire'>
+    <meta name='twitter:image' content='https://wiki.xxiivv.com/media/services/rss.jpg'>
+    <!-- Facebook -->
+    <meta property='og:title' content='Orca' />
+    <meta property='og:type' content='article' />
+    <meta property='og:url' content='http://wiki.xxiivv.com/' />
+    <meta property='og:image' content='https://wiki.xxiivv.com/media/services/rss.jpg' />
+    <meta property='og:description' content='An Esoteric Programming Language' /> 
+    <meta property='og:site_name' content='XXIIVV' />
+    <!-- Defaults -->
     <link rel="stylesheet" type="text/css" href="desktop/sources/links/style.css"/>
-    <title>Orca</title>
+    <title>Orca — Web</title>
   </head>
   <body>
   	<script type="module" src="browser/mock/require.js"></script>
