--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script type="module">
       import Terminal from "./desktop/sources/scripts/terminal.js";
       const terminal = new Terminal()
+      window.__dirname = "desktop/sources";
       window.terminal = terminal
       terminal.install(document.body)
       terminal.start()
