--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -47,10 +47,10 @@
       terminal.controller.add("default","Clock","Play/Pause",() => { terminal.clock.togglePlay() },"Space")
       terminal.controller.add("default","Clock","Frame By Frame",() => { terminal.clock.touch() },"CmdOrCtrl+F")
       terminal.controller.add("default","Clock","Reset Frame",() => { terminal.clock.resetFrame() },"CmdOrCtrl+R")
-      terminal.controller.add("default","Clock","Incr. Speed",() => { terminal.clock.mod(1) },">")
-      terminal.controller.add("default","Clock","Decr. Speed",() => { terminal.clock.mod(-1) },"<")
-      terminal.controller.add("default","Clock","Incr. Speed(10x)",() => { terminal.clock.mod(10,true) },"CmdOrCtrl+>")
-      terminal.controller.add("default","Clock","Decr. Speed(10x)",() => { terminal.clock.mod(-10,true) },"CmdOrCtrl+<")
+      terminal.controller.add("default","Clock","Incr. Speed",() => { terminal.clock.modTimer(1) },">")
+      terminal.controller.add("default","Clock","Decr. Speed",() => { terminal.clock.modTimer(-1) },"<")
+      terminal.controller.add("default","Clock","Incr. Speed(10x)",() => { terminal.clock.modTimer(10,true) },"CmdOrCtrl+>")
+      terminal.controller.add("default","Clock","Decr. Speed(10x)",() => { terminal.clock.modTimer(-10,true) },"CmdOrCtrl+<")
 
       terminal.controller.add("default","View","Zoom In",() => { terminal.modZoom(0.0625) },"CmdOrCtrl+=")
       terminal.controller.add("default","View","Zoom Out",() => { terminal.modZoom(-0.0625) },"CmdOrCtrl+-")
