Clear console on load

--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -5,6 +5,10 @@
   </head>
   <body>
     <script type="module">
+      'use strict'
+
+      console.clear()
+      
       import Terminal from "js:./sources/scripts/terminal.js";
 
       const app = require('electron').remote.app
