--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <body>
   	<script type="module" src="browser/mock/require.js"></script>
     <script type="module">
+      console.clear()
       import Terminal from "./desktop/sources/scripts/terminal.js";
       const terminal = new Terminal()
       window.__dirname = "desktop/sources";
