--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -5,6 +5,8 @@
     <script type="text/javascript" src="scripts/lib/acels.js"></script>
     <script type="text/javascript" src="scripts/lib/theme.js"></script>
     <script type="text/javascript" src="scripts/lib/history.js"></script>
+    <script type="text/javascript" src="scripts/lib/source.js"></script>
+
     <script type="text/javascript" src="scripts/core/library.js"></script>
     <script type="text/javascript" src="scripts/core/io.js"></script>
     <script type="text/javascript" src="scripts/core/operator.js"></script>
@@ -18,7 +20,6 @@
     <script type="text/javascript" src="scripts/clock.js"></script>
     <script type="text/javascript" src="scripts/commander.js"></script>
     <script type="text/javascript" src="scripts/cursor.js"></script>
-    <script type="text/javascript" src="scripts/source.js"></script>
     <script type="text/javascript" src="scripts/terminal.js"></script>
     <title>Orca</title>
   </head>
