Fixed issue with themes

--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="desktop/sources/links/style.css"/>
 
-    <script type="text/javascript">
-      function require(name){
-        console.warn('Failed to require '+name)
-      }
-    </script>
+    <script type="text/javascript">function require(name){ console.warn('Failed to require '+name) }</script>
 
     <script type="text/javascript" src="desktop/sources/scripts/lib/acels.js"></script>
     <script type="text/javascript" src="desktop/sources/scripts/lib/theme.js"></script>
@@ -31,7 +27,7 @@
     <script type="text/javascript" src="desktop/sources/scripts/cursor.js"></script>
     <script type="text/javascript" src="desktop/sources/scripts/terminal.js"></script>
 
-    <title>Orca — Web</title>
+    <title>Orca</title>
   </head>
   <body>
     <script>
