--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="desktop/sources/links/style.css"/>
+    <link rel="icon" href="data:">
 
     <script type="text/javascript">function require(name){ console.warn('Failed to require '+name) }</script>
 
