--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="desktop/sources/links/style.css"/>
     <link rel="icon" href="data:">
+    <link rel="manifest" href="manifest.json">
 
     <script type="text/javascript">function require(name){ console.warn('Failed to require '+name) }</script>
 
