--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head>
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="desktop/sources/links/style.css"/>
-    <link rel="icon" href="data:">
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="favicon.ico">
 
     <script type="text/javascript">function require(name){ console.warn('Failed to require '+name) }</script>
 
