Make client global.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
       window.addEventListener('load', () => {
         client.start()
+        window.orcaClient = client;
       })
 
       // Register PWA Service Worker
