Added noscript message

--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
         try { navigator.serviceWorker.register('sw.js') } catch (err) { console.warn(err) }
       }
     </script>
+    <noscript>Your browser must have Javascript enabled to use Orca, <br />try running the <a href='https://git.sr.ht/~rabbits/orca'>terminal version</a> instead.</noscript>
   </body>
 </html>
