add documentation and sborca collection

--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="scripts/core/library/library.js"></script>
     <script type="text/javascript" src="scripts/core/library/base.js"></script>
     <script type="text/javascript" src="scripts/core/library/default.js"></script>
+    <script type="text/javascript" src="scripts/core/library/sborca.js"></script>
     <script type="text/javascript" src="scripts/core/io.js"></script>
     <script type="text/javascript" src="scripts/core/operator.js"></script>
     <script type="text/javascript" src="scripts/core/orca.js"></script>
